# tunebench

./: .gitignore  Makefile  README.md  pyproject.toml
.github/instructions/: environment-and-language.instructions.md  instructions.md
configs/mcp/: tunebench.http.json
docs/: bert_workflow.md  developer_overview.md  mcp_routing.md  path_structure.md  roadmap.md  workflow_architecture.md
scripts/: run_mcp.sh  status_mcp.sh  stop_mcp.sh
skills/tunebench-finetuning/: SKILL.md
skills/tunebench-finetuning/references/: asset-structure.md  complex-params.md  mcp-interfaces.md  project-boundaries.md
src/tunebench/: __init__.py  cli.py  cli_support.py  debug_cli.py
src/tunebench/artifacts/: __init__.py  manifest.py  names.py  path.py  run_metadata.py
src/tunebench/artifacts/eval_store/: __init__.py  base.py  file_store.py  plot_exporter.py  xlsx_exporter.py
src/tunebench/backends/: __init__.py  base.py  registry.py
src/tunebench/classification/: __init__.py  data_preparer.py  dataset_loader.py  metrics.py  reasoning_generator.py  structured_output_metrics.py  structured_target_builder.py  train_eval_callback.py
src/tunebench/contracts/: __init__.py  backends.py  chat.py  classification.py  common.py  reasoning.py  structured_target.py
src/tunebench/data/: __init__.py
src/tunebench/util/: __init__.py  logging.py  spreadsheet.py
src/tunebench/workflow/: __init__.py  models.py  paths.py  service.py  worker.py
src/tunebench_mcp/: __init__.py  __main__.py  adapters.py  debug_server.py  server.py
src/tunebench_mcp/routes/: __init__.py  assets.py  execute.py  manage.py  shared.py  utility.py
(+27 files in other folders)
